# sdlTestGame

./: CMakeLists.txt  README.md  game_events.cpp  hardware_events.cpp  image.cpp  image_data.cpp  main.cpp  scene.cpp  scene_display.cpp  sdl_events.cpp  sdl_graphics.cpp
lib/: game_events.h  hardware_events.h  image.h  image_data.h  scene.h  scene_display.h  sdl_events.h  sdl_graphics.h
